--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,23 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/server.py",
+      "src": "server.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "build" }
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/server.py"
+    },
+    {
       "src": "/(.*)",
-      "dest": "backend/server.py"
+      "dest": "/frontend/build/$1"
     }
   ]
 }
