--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/frontend/build" }]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/frontend/build/index.html" }
+  ]
 }
