rendering main page

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,24 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/frontend/build/index.html" }
+    {
+      "source": "/manifest.json",
+      "destination": "/frontend/build/manifest.json"
+    },
+    {
+      "source": "/favicon.ico",
+      "destination": "/frontend/build/favicon.ico"
+    },
+    {
+      "source": "/logo192.png",
+      "destination": "/frontend/build/logo192.png"
+    },
+    {
+      "source": "/logo512.png",
+      "destination": "/frontend/build/logo512.png"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/frontend/build/index.html"
+    }
   ]
 }
