--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/frontend/build/index.html"
+      "destination": "/frontend/public/index.html"
     }
   ]
 }
