--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,34 @@
+// {
+//   "rewrites": [
+//     {
+//       "source": "/(.*)",
+//       "destination": "/frontend/public/index.html"
+//     }
+//   ]
+// }
+
 {
-  "rewrites": [
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/frontend/public/index.html"
+      "src": "backend/app.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "frontend/build/**/*",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "frontend/build"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/backend/app.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/build/index.html"
     }
   ]
 }
